# The-Word-Game

./: .gitignore
C++/: CMakeLists.txt  README.md  The-Word Game 202101070125.rar  main.cpp  uml.wsd
C++/Card/: Card.cpp  Card.h  StatusEffect.cpp  StatusEffect.h  UnitCard.cpp  UnitCard.h
C++/Card/Original package/: Original package.h
C++/Card/Original package/Unit/: Goblin.h  ImperialSoldier.h  Wolf.h
C++/ExternalLibrary/: ExternalLibrary.cpp  ExternalLibrary.h
C++/Game/: Game.cpp  Game.h  Labels.cpp  Labels.h  Player.cpp  Player.h
Py/: README.md  main.py
Py Web/: README.md  client.cmd  console.cmd  server.cmd  server_eve.cmd  server_pbe.cmd  server_pve.cmd  test.py  设计概念.xmind
Py Web/Client/: main.py
Py Web/Client/idl/game/: GameServer.py  __init__.py
Py Web/Client/test/: index.html  main.js
Py Web/Server/: ConsoleClient.py  main.py  main.spec  main_eve.py  main_pbe.py  main_pve.py
Py Web/Server/AI/: Foolish.py
Py Web/Server/Card/: Card.py  SkillCard.py  StatusEffect.py  UnitCard.py
Py Web/Server/Card/OriginalPackage/: Unit.py  __init__.py
Py Web/Server/ExternalLibrary/: ExternalLibrary.py  MsyEvent.py  MsyRPC.py  MsySocket.py
Py Web/Server/Game/: Console.py  Game.py  Label.py  Player.py
Py Web/Server/Mod/: __init__.py
Py Web/Server/Mod/AncientGods/: Skill.py  Unit.py  __init__.py
Py Web/Server/Mod/Touhou/: Unit.py  (+1 more)
Py Web/Server/idl/: game.thrift
Py/Card/: Card.py  SkillCard.py  StatusEffect.py  UnitCard.py
Py/Card/OriginalPackage/: Unit.py
Py/ExternalLibrary/: ExternalLibrary.py
Py/Game/: Game.py  Label.py  Player.py
(+6 files in other folders)
